# Variegator

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  namespace.h  variations.h
src/cuda/: CMakeLists.txt  cuda.cu  cuda.h
